# Meta

./: .dockerignore  .env.example  .gitignore  BODY_PARAMETER_FIX.md  Dockerfile  FIXES_APPLIED.md  README.md  SUBMISSION_READY.md  TECHNICAL_ANALYSIS.md  TEST_LOCALLY.sh  __init__.py  app.py  client.py  entrypoint.sh  implementation_plan.md  inference.py  models.py  openenv.yaml  pyproject.toml  read_json.py  test_docker.py  tmp_test_api.py  validate_result.json
server/: __init__.py  app.py
workplace_ai_env/: __init__.py  models.py
workplace_ai_env/graders/: base_grader.py  email_grader.py  scheduling_grader.py  workflow_grader.py
workplace_ai_env/rewards/: reward_shaper.py
workplace_ai_env/scenarios/: email_scenarios.py  meeting_scenarios.py  scenario_generator.py  workflow_scenarios.py
workplace_ai_env/server/: app.py  requirements.txt  workplace_environment.py
workplace_ai_env/tasks/: base_task.py  email_triage.py  meeting_scheduler.py  workflow_executor.py
workplace_ai_env/tests/: test_environment.py
